--- a/docker/grafana/provisioning/datasources/all.yml
+++ b/docker/grafana/provisioning/datasources/all.yml
@@ -1,13 +1,19 @@
-# config file version
 apiVersion: 1
 
-# list of datasources to insert/update depending what's available in the database
 datasources:
-- name: Prometheus
-  type: prometheus
-  access: proxy
-  org_id: 1
-  url: http://prometheus-server:9090
-  is_default: true
-  version: 1
-  editable: true
+  - name: Prometheus
+    type: prometheus
+    access: proxy
+    org_id: 1
+    url: http://prometheus-server:9090
+    is_default: true
+    version: 1
+    editable: true
+
+  - name: Loki
+    type: loki
+    access: proxy
+    org_id: 1
+    url: http://loki-server:3100
+    version: 1
+    editable: true
