--- a/docker/prometheus/Dockerfile
+++ b/docker/prometheus/Dockerfile
@@ -1,2 +1,3 @@
-FROM prom/prometheus:latest
+FROM prom/prometheus:v2.52.0
 ADD prometheus.yml /etc/prometheus/
+ADD alert-rules.yml /etc/prometheus/
