--- a/docker/grafana/Dockerfile
+++ b/docker/grafana/Dockerfile
@@ -1,4 +1,4 @@
 FROM grafana/grafana:10.2.3
-ADD ./provisioning /etc/grafana/provisioning
-ADD ./grafana.ini /etc/grafana/grafana.ini
-ADD ./dashboards /var/lib/grafana/dashboards
+ADD ./grafana/provisioning /etc/grafana/provisioning
+ADD ./grafana/grafana.ini /etc/grafana/grafana.ini  
+ADD ./grafana/dashboards /var/lib/grafana/dashboards
