--- a/docker/prometheus/Dockerfile
+++ b/docker/prometheus/Dockerfile
@@ -1,3 +1,3 @@
 FROM prom/prometheus:v2.52.0
-ADD prometheus.yml /etc/prometheus/
-ADD alert-rules.yml /etc/prometheus/
+ADD prometheus/prometheus.yml /etc/prometheus/
+ADD prometheus/alert-rules.yml /etc/prometheus/
