Fix vets-service profile: change from production to docker

--- a/spring-petclinic-vets-service/src/main/resources/application.yml
+++ b/spring-petclinic-vets-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   cache:
     cache-names: vets
   profiles:
-    active: production
+    active: docker  # ← Change this line in application.yml
 
 ---
 spring:
