chore: change the profile in test stage into Test

--- a/spring-petclinic-customers-service/src/test/resources/application-test.yml
+++ b/spring-petclinic-customers-service/src/test/resources/application-test.yml
@@ -14,5 +14,17 @@ eureka:
   client:
     enabled: false
 
-logging.level.org.springframework: INFO
+# Disable management endpoints for tests
+management:
+  endpoints:
+    enabled-by-default: false
+  endpoint:
+    health:
+      enabled: true
+
+# Simple logging levels for tests
+logging:
+  level:
+    org.springframework.samples.petclinic: INFO
+    org.springframework.web: WARN
 
